the width of the cart link on mobile menu fixed

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -66,7 +66,7 @@
 
 .cart {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     width: 70px;
 
@@ -180,8 +180,14 @@
         }
 
         &.mobile {
+            justify-content: flex-start;
             margin: 0;
             padding-top: 15px;
+            width: 100%;
+
+            > .nav__link.cart__icon {
+                width: 100%;
+            }
         }
     }
 
